--- a/app/homePage/templates/homePage.html
+++ b/app/homePage/templates/homePage.html
@@ -76,7 +76,7 @@
 				</div>
 				<div class="col">
 					<div class="row">
-						<div class="col"><a href="#/homedetail"><img src="img/dd.png" class="link-image" /></a></div>
+						<div class="col"><a href="#/homedetail"><img src="img/profilego.png" class="link-image" /></a></div>
 					</div>
 					<div ng-if="Home.nextSeriesExam">
 						<div class="row row.border-style home-notification-title red">
