--- a/app/login/templates/forgotpassword.html
+++ b/app/login/templates/forgotpassword.html
@@ -4,11 +4,32 @@
 			<br>
 			<br>
 			<br>
+
+				<div class="row">
+			  <div class="col-10">
+			 </div>
+			  <div class="col-80">
+			      <img src="img/neweforget.png" width="100%" >
+			  </div>
+			  <div class="col-10">
+			  </div>
+			</div>
 			<div class="row">
 				<div class="col-10">
 				</div>
-				<div class="col-80" style="color: mediumblue;margin-bottom: 10px;">
-					Enter your Email Address
+				<div class="col-80" style="color: #000033;margin-bottom: 10px;">
+					Enter Your Email Address
+				</div>
+				<div class="col-10">
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-10">
+				</div>
+				<div class="col-80">
+					<input type="text" placeholder="Email address" style=" width: 100% ;padding: 12px 20px ;margin: 8px 0 ;box-sizing: border-box; border: 3px solid #ccc;  -webkit-transition: 0.3s; transition: 0.3s;
+                        outline: none; " ng-model="ForgotPassword.currentUser.email"/>
 				</div>
 				<div class="col-10">
 				</div>
@@ -17,16 +38,7 @@
 				<div class="col-10">
 				</div>
 				<div class="col-80">
-					<input type="text" placeholder="Email address" style="padding-left:10px" ng-model="ForgotPassword.currentUser.email"/>
-				</div>
-				<div class="col-10">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-10">
-				</div>
-				<div class="col-80">
-					<button class="button button-block button-royal button-login reg-color" ng-click="ForgotPassword.resetPassword()">Reset Password</button>
+					<button class="button button-block button-royal button-login reg-color newbcolorforbutton" ng-click="ForgotPassword.resetPassword()">Reset Password</button>
 				</div>
 				<div class="col-10">
 				</div>
