--- a/app/notifications/templates/myNews.html
+++ b/app/notifications/templates/myNews.html
@@ -59,9 +59,14 @@
    </ul>
 </div>
 <ion-view title={{pageTitle}}>
+
 	<ion-content class="">
 		<div class="ion-content ">
-                  <center><h2>My Posts</h2></center>
+             <div class="row navbarcreater">
+                      <div class="col"><center><h3 style="color: #00cc7a;">MY POSTS</h3></center></div>
+                    </div>
+                  <br>
+                  
 		<div class ="row">
 			<div class ="col-10">
 			</div>
