--- a/app/notifications/templates/notifications.html
+++ b/app/notifications/templates/notifications.html
@@ -23,7 +23,7 @@
 
       <li class="navigation-items"> 
             <img src="img/g.png" class="image-style float-left"  style="padding-top: 7px;" width="10%"/>
-            <a href="index.html#/sylabus" class=="float-left" >Sylabus</a>
+            <a href="index.html#/sylabus" class=="float-left" >Syllabus</a>
       </li>
 
       <li class="navigation-items"> 
@@ -69,7 +69,7 @@
 					<div class="row" ng-if="news.pic">
 						<div class="col img-align">
 							<a ng-click="News.savePost(news.pic)"  title="ImageName">
-							    <img src="img/save.png" width="15%" ng-click="News.savePost(news.pic)">
+							    <img src="img/save.png" width="5%" ng-click="News.savePost(news.pic)">
 							</a>
 						</div>
 					</div>
