--- a/app/sylabus/templates/sylabus.html
+++ b/app/sylabus/templates/sylabus.html
@@ -23,7 +23,7 @@
 
       <li class="navigation-items"> 
       	<img src="img/g.png" class="image-style float-left"  style="padding-top: 7px;" width="10%"/>
-      	<a href="index.html#/sylabus" class=="float-left" >Sylabus</a>
+      	<a href="index.html#/sylabus" class=="float-left" >Syllabus</a>
       </li>
 
       <li class="navigation-items"> 
@@ -61,11 +61,12 @@
 <ion-view title={{pageTitle}}>
 	<ion-content class="">
 		<div class="ion-content ">
+			 <div class="row navbarcreater">
+                      <div class="col"><center><h3 style="color: #00cc7a;">SYLLABUS</h3></center></div>
+                    </div>
 			<br>
-			<div class="row">
-				<div class="col-10">
-				</div>
-				<div class="col">
+			<br>
+			
 					<div class="row">
 						<div class="col-10">
 						</div>
@@ -77,6 +78,14 @@
 						  </label>
 						</div>
 						</div>
+						<div class="col-10">
+						</div>
+
+					</div>
+					<div class="row">
+					      
+					        <div class="col-10">
+					        </div>
 							<div class="col">
 							<div class="list list-inset sylabus-text">
 						  	<label class="item item-input">
@@ -85,14 +94,15 @@
 						  	</label>
 							</div>
 							</div>
+						
 						<div class="col-10">
 							</div>
-						</div>
+				    </div>
 						<div class="row">
 							<div class="col-10">
 							</div>
 							<div class="col search-icon">
-								<img src="img/search-icon.png" ng-click="Sylabus.getSyllabus()">
+								<img src="img/searchbu.png" width="35%" ng-click="Sylabus.getSyllabus()">
 							</div>
 							<div class="col-10">
 							</div>
