--- a/app/unionpost/templates/unionpost.html
+++ b/app/unionpost/templates/unionpost.html
@@ -23,7 +23,7 @@
 
       <li class="navigation-items"> 
       	<img src="img/g.png" class="image-style float-left"  style="padding-top: 7px;" width="10%"/>
-      	<a href="index.html#/sylabus" class=="float-left" >Sylabus</a>
+      	<a href="index.html#/sylabus" class=="float-left" >Syllabus</a>
       </li>
 
       <li class="navigation-items"> 
@@ -61,6 +61,10 @@
 <ion-view title={{pageTitle}}>
 	<ion-content class="">
 		<div class="ion-content ">
+		 <div class="row navbarcreater">
+                      <div class="col"><center><h3 style="color: #00cc7a;">UNION POST</h3></center></div>
+                    </div>
+			<br>
 			<div class="row">
 				<div class="col-10">
 					</div>
