--- a/app/editprofile/templates/editprofile.html
+++ b/app/editprofile/templates/editprofile.html
@@ -61,10 +61,15 @@
 <ion-view title={{pageTitle}}>
 	<ion-content class="">
 		<div class="ion-content ">
+		        
+		        <div class="row navbarcreater">
+		          <div class="col"><center><h3 style="color: #00cc7a;">EDIT PROFILE</h3></center></div>
+		        </div>
+
 				<div class ="row">
 						<div class="col-10">
 						</div>
-						<div class="col"><h4>Name</h4>
+						<div class="col"><h5>Name</h5>
 						</div>
 
 				</div>
@@ -72,7 +77,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input type ="text" class="text-style" name="uname" ng-model="Editprofile.name">
+						<input type ="text" class="text-style" name="uname" style="border: 3px solid darkgrey; " ng-model="Editprofile.name">
 					</div>
 					<div class ="col-10">
 					</div>
@@ -88,7 +93,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<textarea  class="textarea-style" name="uaddress" ng-model="Editprofile.address"></textarea>
+						<textarea  class="textarea-style" name="uaddress" style="border: 3px solid darkgrey; " ng-model="Editprofile.address"></textarea>
 					</div>
 					<div class ="col-10">
 					</div>
@@ -106,7 +111,7 @@
 					<div class ="col-10">
 					</div>
 					<div class ="col">
-						<input type ="text" class="text-style" name="phoneno" ng-model="Editprofile.phone">
+						<input type ="text" class="text-style" name="phoneno" style="border: 3px solid darkgrey; " ng-model="Editprofile.phone">
 					</div>
 					<div class ="col-10">
 					</div>
@@ -138,7 +143,7 @@
 					<div class ="col-33">
 					</div>
 					<div class ="col">
-						<input type ="button" class="button button-full button-assertive" value="Save" ng-click="Editprofile.editUserDetails()">
+						<input type ="button" class="button button-block button-royal button-login reg-color newbcolorforbutton" value="Save" ng-click="Editprofile.editUserDetails()">
 					</div>
 					<div class ="col-33">
 					</div>
